--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="home" class="page active">
         <div class="container mx-auto px-4 py-8 max-w-4xl">
             <!-- Header -->
-            <div class="text-center mb-12">
+            <div class="text-center mb-12 ">
                 <h1 class="script-font text-6xl md:text-8xl font-bold text-yellow-600 mb-4 drop-shadow-lg">
                     Wedding Invitation
                 </h1>
@@ -111,8 +111,8 @@
             </div>
             <div class="bg-white/80 backdrop-blur-sm rounded-3xl p-8 shadow-2xl border border-yellow-200 flex flex-col items-center max-w-4xl">
                 <div class="grid md:grid-cols-2">
-                    <div class="space-y-6  w-50% ml-8 ">
-                         <h1 class="script-font text-5xl font-bold text-yellow-600 mb-4 max-sm:text-center">Mappillai Azhaippu</h1>
+                    <div class="space-y-6  w-50% ml-8 max-sm:ml-auto">
+                         <h1 class="script-font text-5xl font-bold text-yellow-600 mb-4 max-sm:text-center ">Mappillai Azhaippu</h1>
                         <div class="grid grid-cols-2 gap-4 text-lg md:border-r-2 border-yellow-600">
                     
                             <div class="mt-10 ">
@@ -127,7 +127,7 @@
 
                        
                     </div>
-                    <div class="space-y-6 w-50% ml-8 max-sm:mt-16 max-sm:border-t-2 border-yellow-600">
+                    <div class="space-y-6 w-50% ml-8 max-sm:mt-16 max-sm:border-t-2 border-yellow-600 max-sm:m-auto">
                            <h1 class="script-font text-5xl font-bold text-yellow-600 mb-4 text-center max-sm:mt-10">Wedding Ceremony</h1>
                         <div class="grid grid-cols-2 gap-4 text-lg">
                             <div class="mt-10">
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="text-center text-2xl mt-16 m-8">
+                <div class="text-center text-2xl mt-16 m-8 max-sm:text-xl">
                             <h4 class="elegant-font font-semibold text-gray-800 mb-1">Venue:</h4>
                             <p class="text-gray-600">
                                 Shri Venkateswara Mahal<br>
