--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                          <h1 class="script-font text-5xl font-bold text-yellow-600 mb-4 max-sm:text-center ">Mappillai Azhaippu</h1>
                         <div class="grid grid-cols-2 gap-4 text-lg md:border-r-2 border-yellow-600">
                     
-                            <div class="mt-10 ">
-                                <h4 class="elegant-font font-semibold text-gray-800 mb-1 ">Date</h4>
+                            <div class="mt-10  max-sm:ml-8">
+                                <h4 class="elegant-font font-semibold text-gray-800 mb-1">Date</h4>
                                 <p class="text-gray-600">November 2, 2025 (Sunday)</p>
                             </div>
                             <div class="mt-10">
@@ -129,7 +129,7 @@
                     </div>
                     <div class="space-y-6 w-50% ml-8 max-sm:mt-16 max-sm:border-t-2 border-yellow-600 max-sm:m-auto">
                            <h1 class="script-font text-5xl font-bold text-yellow-600 mb-4 text-center max-sm:mt-10">Wedding Ceremony</h1>
-                        <div class="grid grid-cols-2 gap-4 text-lg">
+                        <div class="grid grid-cols-2 gap-4 text-lg  max-sm:ml-8 max-sm:ml-8">
                             <div class="mt-10">
                                 <h4 class="elegant-font font-semibold text-gray-800 mb-1">Date</h4>
                                 <p class="text-gray-600">November 3, 2025 (Monday)</p>
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="text-center text-2xl mt-16 m-8 max-sm:text-xl">
+                <div class="text-center text-2xl mt-16 max-sm:text-xl">
                             <h4 class="elegant-font font-semibold text-gray-800 mb-1">Venue:</h4>
                             <p class="text-gray-600">
                                 Shri Venkateswara Mahal<br>
