--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div id="mappillai" class="page">
         <div class="container mx-auto px-4 py-8 flex flex-row items-center max-w-screen justify-evenly">
             <div class="max-sm:hidden">
-                <img src="img/chengalpattu name board.png" alt="img" width="300" height="300">
+                <img src="img/1-removebg-preview.png" alt="img" width="400" height="400">
             </div>
             <div class="bg-white/80 backdrop-blur-sm rounded-3xl p-8 shadow-2xl border border-yellow-200 flex flex-col items-center max-w-4xl">
                 <div class="grid md:grid-cols-2">
@@ -197,7 +197,7 @@
                 </div>
             </div>
              <div class="max-sm:hidden">
-                <img src="img/karaikudi name board.png" alt="img" width="300" height="300">
+                <img src="img/2-removebg-preview.png" alt="img" width="400" height="400">
             </div> 
         </div>
     </div>
