--- a/index.html
+++ b/index.html
@@ -107,9 +107,12 @@
     <div id="mappillai" class="page">
         <div class="container mx-auto px-4 py-8 flex flex-row items-center max-w-screen justify-evenly">
             <div class="max-sm:hidden">
-                <img src="img/1-removebg-preview.png" alt="img" width="400" height="400">
+                <img src="img/1-removebg-preview (1).png" alt="img" width="400" height="400">
             </div>
-            <div class="bg-white/80 backdrop-blur-sm rounded-3xl p-8 shadow-2xl border border-yellow-200 flex flex-col items-center max-w-4xl">
+            <div class="bg-white/80 backdrop-blur-sm rounded-3xl p-8 shadow-2xl border border-yellow-200 flex flex-col items-center max-w-4xl relative">
+                <div class="board hidden max-sm:block w-32 h-10 text-center place-content-center bg-red-400 absolute top-8 -left-5 -rotate-45 z-index-3 -skew-x-1">
+                    <h1>Chengalpattu</h1>
+                </div>
                 <div class="grid md:grid-cols-2">
                     <div class="space-y-6  w-50% ml-8 max-sm:ml-auto">
                          <h1 class="script-font text-5xl font-bold text-yellow-600 mb-4 max-sm:text-center ">Mappillai Azhaippu</h1>
@@ -156,8 +159,8 @@
    
 
     <!-- Reception Page -->
-    <div id="reception" class="page mt-16">
-        <div class="container mx-auto px-4 py-8  flex flex-row items-center justify-evenly max-w-screen">
+    <div id="reception" class="page ">
+        <div class="container mx-auto px-4  flex flex-row items-center justify-evenly max-w-screen">
                       
             <div class="bg-white/80 backdrop-blur-sm rounded-3xl p-8 shadow-2xl border border-yellow-200 max-w-4xl">
                 <div class="text-center mb-8">
@@ -182,7 +185,7 @@
                             <h4 class="elegant-font font-semibold text-gray-800 mb-1 ">Venue</h4>
                             <p class="text-gray-600">
                                 MAADAN MAHAL<br>
-                                (near Five Lamps), Karaikudi.
+                                (Near Five Lamps), Karaikudi.
                             </p>
                         </div>
                     </div>
@@ -197,7 +200,7 @@
                 </div>
             </div>
              <div class="max-sm:hidden">
-                <img src="img/2-removebg-preview.png" alt="img" width="400" height="400">
+                <img src="img/2-removebg-preview (1).png" alt="img" width="400" height="400">
             </div> 
         </div>
     </div>
