--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <div class="name text-center mb-12 ">
                 <h1 class="script-font text-6xl md:text-8xl font-bold text-pink-950 mb-4 drop-shadow-lg">Ram Sundar</h1>
-                <h1 class="script-font text-6xl md:text-4xl font-bold text-sky-800 mb-4 drop-shadow-lg">Weds</h1>
+                <h1 class="script-font text-6xl md:text-4xl font-bold text-sky-800  drop-shadow-lg">Weds</h1>
                 <h1 class="script-font text-6xl md:text-8xl font-bold text-pink-950 mb-4 drop-shadow-lg">Ramya</h1>
             </div>
 
@@ -110,7 +110,7 @@
                 <img src="img/1-removebg-preview (1).png" alt="img" width="400" height="400">
             </div>
             <div class="bg-white/80 backdrop-blur-sm rounded-3xl p-8 shadow-2xl border border-yellow-200 flex flex-col items-center max-w-4xl relative">
-                <div class="board hidden max-sm:block w-32 h-10 text-center place-content-center bg-red-400 absolute top-8 -left-5 -rotate-45 z-index-3 -skew-x-1">
+                <div class="board hidden max-sm:block w-40 h-10 text-center place-content-center bg-red-400 absolute top-8 -left-5 -rotate-45 z-index-3 -skew-x-12 text-xl">
                     <h1>Chengalpattu</h1>
                 </div>
                 <div class="grid md:grid-cols-2">
@@ -144,25 +144,32 @@
                         </div>
                     </div>
                 </div>
+
+                <a href="https://maps.app.goo.gl/byV6FLctVBV3ysr86">
+
                 <div class="text-center text-2xl mt-16 max-sm:text-xl">
                             <h4 class="elegant-font font-semibold text-gray-800 mb-1">Venue:</h4>
                             <p class="text-gray-600">
                                 Shri Venkateswara Mahal<br>
-                                (Kancheepuram Bypass Road), Chengalpattu.
+                                (Kancheepuram Bypass Road),<br> Chengalpattu.
                             </p>
                 </div>
+                </a>
             </div>
         </div>
-    </div>
+    </sky
 
    
    
 
-    <!-- Reception Page -->
-    <div id="reception" class="page ">
+    <!--  Reception Page -->
+    <div id="reception" class="page max-sm:mb-12">
         <div class="container mx-auto px-4  flex flex-row items-center justify-evenly max-w-screen">
                       
-            <div class="bg-white/80 backdrop-blur-sm rounded-3xl p-8 shadow-2xl border border-yellow-200 max-w-4xl">
+            <div class="bg-orange-100 backdrop-blur-sm rounded-3xl p-8 shadow-2xl border border-yellow-200 max-w-4xl relative">
+                <div class="board hidden max-sm:block w-32 h-10 text-center place-content-center bg-red-400 absolute top-8 -right-5 rotate-45 z-index-3 skew-x-12 text-2xl">
+                    <h1>Karaikudi</h1>
+                </div>
                 <div class="text-center mb-8">
                     <h1 class="script-font text-5xl font-bold text-yellow-600 mb-4">Reception</h1>
                     <div class="w-24 h-1 bg-gradient-to-r from-transparent via-yellow-600 to-transparent mx-auto"></div>
@@ -180,14 +187,29 @@
                                 <p class="text-gray-600">6:00 PM onwards</p>
                             </div>
                         </div>
+                        <!-- <a class="text-center text-2xl" href="https://maps.app.goo.gl/byV6FLctVBV3ysr86">
+                           <span class="elegant-font font-semibold text-gray-800 mb-1">Venue</span>
+                            <span class="text-gray-600">MAADAN MAHAL<br>
+                                (Near Five Lamps), Karaikudi.</span>
+                        </a> -->
 
-                        <div class="text-center text-2xl">
+                        <a href="https://maps.app.goo.gl/91w38ysNwpVz778n9" class="mt-10">
+                            <div class="text-center text-2xl mt-10">
+                            <h4 class="elegant-font font-semibold text-gray-800 mb-1 ">Venue</h4>
+                            <p class="text-gray-600">
+                                MAADAN MAHAL<br>
+                                (Near Five Lamps), <br> Karaikudi.
+                            </p>
+                        </div>
+                        </a>
+
+                        <!-- <div class="text-center text-2xl">
                             <h4 class="elegant-font font-semibold text-gray-800 mb-1 ">Venue</h4>
                             <p class="text-gray-600">
                                 MAADAN MAHAL<br>
                                 (Near Five Lamps), Karaikudi.
                             </p>
-                        </div>
+                        </div> -->
                     </div>
 
                     <!-- QR/Image on right -->
@@ -202,6 +224,21 @@
              <div class="max-sm:hidden">
                 <img src="img/2-removebg-preview (1).png" alt="img" width="400" height="400">
             </div> 
+        </div>
+    </div>
+    <div class="footer bg-gradient-to-r from-pink-100 via-rose-100 to-purple-100 py-8 px-4 text-center border-t-2 border-yellow-300">
+        <div class="max-w-4xl mx-auto">
+            <h1 class="text-2xl font-bold text-gray-800 mb-4">Best compliments from</h1> 
+            <div class="flex justify-center items-center mb-4">
+                <img src="img/logo.png" alt="logo" class="w-12 h-12 rounded-full border-2 border-yellow-400">
+            </div>
+            <h2 class="text-lg text-gray-700 font-semibold">HebeSec Technologies</h2>
+            <p class="text-gray-600">India / Malaysia</p>
+            <div class="mt-4 flex justify-center space-x-2">
+                <span class="text-2xl">💕</span>
+                <span class="text-2xl">🌸</span>
+                <span class="text-2xl">💕</span>
+            </div>
         </div>
     </div>
 
