--- a/index.html
+++ b/index.html
@@ -105,18 +105,18 @@
 
     <!-- Mappillai Azhaippu Page -->
     <div id="mappillai" class="page">
-        <div class="container mx-auto px-4 py-8 flex flex-row items-center max-w-screen justify-evenly">
+        <div class="container mx-auto px-4 py-8 flex flex-row items-center max-w-screen justify-evenly max-sm:px-2">
             <div class="max-sm:hidden">
                 <img src="img/1-removebg-preview (1).png" alt="img" width="400" height="400">
             </div>
             <div class="bg-white/80 backdrop-blur-sm rounded-3xl p-8 shadow-2xl border border-yellow-200 flex flex-col items-center max-w-4xl relative">
-                <div class="board hidden max-sm:block w-40 h-10 text-center place-content-center bg-red-400 absolute top-8 -left-5 -rotate-45 z-index-3 -skew-x-12 text-xl">
+                <div class="board hidden max-sm:block w-40 h-10 text-center place-content-center bg-red-400 absolute top-8 -left-8 -rotate-45 z-index-3 -skew-x-12 text-xl">
                     <h1>Chengalpattu</h1>
                 </div>
                 <div class="grid md:grid-cols-2">
-                    <div class="space-y-6  w-50% ml-8 max-sm:ml-auto">
-                         <h1 class="script-font text-5xl font-bold text-yellow-600 mb-4 max-sm:text-center ">Mappillai Azhaippu</h1>
-                        <div class="grid grid-cols-2 gap-4 text-lg md:border-r-2 border-yellow-600">
+                    <div class="space-y-6  w-50% ml-8 max-sm:ml-auto ">
+                         <h1 class="script-font text-5xl font-bold text-yellow-600 mb-4 max-sm:text-center">Mappillai Azhaippu</h1>
+                        <div class="grid grid-cols-2 gap-4 text-lg md:border-r-2 border-yellow-600 max-sm:text-base">
                     
                             <div class="mt-10  max-sm:ml-8">
                                 <h4 class="elegant-font font-semibold text-gray-800 mb-1">Date</h4>
@@ -132,7 +132,7 @@
                     </div>
                     <div class="space-y-6 w-50% ml-8 max-sm:mt-16 max-sm:border-t-2 border-yellow-600 max-sm:m-auto">
                            <h1 class="script-font text-5xl font-bold text-yellow-600 mb-4 text-center max-sm:mt-10">Wedding Ceremony</h1>
-                        <div class="grid grid-cols-2 gap-4 text-lg  max-sm:ml-8 max-sm:ml-8">
+                        <div class="grid grid-cols-2 gap-4 text-lg  max-sm:ml-auto max-sm:text-base">
                             <div class="mt-10">
                                 <h4 class="elegant-font font-semibold text-gray-800 mb-1">Date</h4>
                                 <p class="text-gray-600">November 3, 2025 (Monday)</p>
@@ -177,7 +177,7 @@
 
                 <div class="grid md:grid-cols-1">
                     <div class="space-y-6">
-                        <div class="grid grid-cols-2 gap-20 bg-red text-2xl max-sm:text-xl">
+                        <div class="grid grid-cols-2 gap-20 bg-red text-2xl max-sm:text-base">
                             <div>
                                 <h4 class="elegant-font font-semibold text-gray-800 mb-1">Date</h4>
                                 <p class="text-gray-600">November 8, 2025 (Saturday)</p>
